2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/gcc-torture-execute-func-ptr-1.c,
	  support/regression/tests/z88dk.c:
	  Give up on supporting function pointers for stm8 large memory model.
	* device/lib/Makefile.in:
	  Build library for stm8 large memory model by default.

2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix long long return values for large memory model.
	* sim/ucsim/stm8.src/glob.cc:
	  Fix decoding of jpf.
	* device/lib/stm8-large/setjmp.s:
	  Fix longjmp() for large memory model.

2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCasm.c,
	  src/SDCCicode.c,
	  src/SDCCralloc.hpp,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc2.cc,
	  src/stm8/peep.c:
	  Improve handling of global pointers.

2018-03-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Implement basic optimization of calls to standard library functions, RFE #564.
	* support/regression/tests/bug-716242.c,
	  support/regression/tests/genptrs.c:
	  Fix tests that assign void * to function pointers.
	* src/SDCCglue.c:
	  Use jpf to reach main() for stm8 large memory model.
	* src/stm8/gen.c:
	  Give up on assembler for stm8 large memory model to make regression tests pass.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor optimization for 8-bit pointer reads.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/constantRange.c: